Removed the gtk dirs

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -1,7 +1,3 @@
-# Environmental values
-env = LIBVA_DRIVER_NAME,nvidia
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-env = TERMINAL,kitty
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_CONFIG_HOME,$HOME/.config
@@ -33,10 +29,11 @@ exec-once = nm-applet --indicator
 # Clipboard history
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
-bind = SUPER, PERIOD, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
+bind = SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 
 # Layer rules
 layerrule = blur,notifications
+layerrule = blur,waybar
 layerrule = ignorezero, notifications
 layerrule = blur,rofi
 layerrule = blur,logout_dialog
@@ -44,7 +41,7 @@ layerrule = blur,logout_dialog
 # notifd
 exec-once = mako &
 
-# Window decorations
+# Decorations
 decoration {
     rounding = 7
     rounding_power = 2.0
@@ -144,16 +141,20 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = CTRL ALT, DELETE, exec, wlogout
 bind = ALT, Return, fullscreen
 bind = $mainMod, C, exec, hyprpicker
-bind = $mainMod, W, togglefloating
+bind = $mainMod SHIFT, SPACE, togglefloating
 bindm = $mainMod,mouse:272,movewindow
 bindm = $mainMod,mouse:273,resizewindow
+bind = $mainMod ALT, H, resizeactive, -10 0
+bind = $mainMod ALT, J, resizeactive, 0 10
+bind = $mainMod ALT, K, resizeactive, 0 -10
+bind = $mainMod ALT, L, resizeactive, 10 0
 bind = $mainMod, Q, killactive,
-bind = CTRL ALT, T, exec, $terminal
+bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, SPACE, exec, $menu
-bind = $mainMod, B, exec, $browser
-bind = $mainMod SHIFT, E, exec, $fileManager
+bind = $mainMod, W, exec, $browser
+bind = $mainMod SHIFT, E, exec, $fileManager-alt
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod SHIFT, L, exec, hyprlock
+bind = $mainMod SHIFT, Q, exec, hyprlock
 bind = $mainMod SHIFT, S, exec, hyprshot -zm region
 bind = $mainMod CTRL, C, exec, killall waybar || waybar
 
@@ -168,7 +169,3 @@ bind = $mainMod SHIFT, h, movewindow, l
 bind = $mainMod SHIFT, l, movewindow, r
 bind = $mainMod SHIFT, k, movewindow, u
 bind = $mainMod SHIFT, j, movewindow, d
-
-# Move to other workspaces
-bind = $mainMod ALT, h, workspace, r-1
-bind = $mainMod ALT, l, workspace, r+1
