--- a/kitty/.config/kitty/current-theme.conf
+++ b/kitty/.config/kitty/current-theme.conf
@@ -1,51 +1,35 @@
-# vim:ft=kitty
-
-## name: Adwaita dark
-## license: MIT
-## author: Emil Löfquist (https://github.com/ewal)
-## upstream: https://github.com/ewal/kitty-adwaita/blob/main/adwaita_dark.conf
-## blurb: Adwaita dark - based on https://github.com/Mofiqul/adwaita.nvim
-
 background                #1d1d1d
-foreground                #deddda
-
-selection_background      #303030
-selection_foreground      #c0bfbc
-
-url_color                 #1a5fb4
-
+foreground                #eeeeee
+selection_background      #4d4d4d
+selection_foreground      #e1e1e1
+url_color                 #5a666f
 wayland_titlebar_color    system
 macos_titlebar_color      system
-
-cursor                    #deddda
-cursor_text_color         #1d1d1d
-
-active_border_color       #4f4f4f
-inactive_border_color     #282828
-bell_border_color         #ed333b
+cursor                    #eeeeee
+cursor_text_color         #333333
+active_border_color       #333333
+inactive_border_color     #4d4d4d
+bell_border_color         #865054
 visual_bell_color         none
-
-active_tab_background     #242424 
-active_tab_foreground     #fcfcfc
-inactive_tab_background   #303030
-inactive_tab_foreground   #b0afac
+active_tab_background     #2a2a2a
+active_tab_foreground     #eeeeee
+inactive_tab_background   #3a3a3a
+inactive_tab_foreground   #b0b0b0
 tab_bar_background        none
 tab_bar_margin_color      none
-
-color0                    #1d1d1d
-color1                    #ed333b
-color2                    #57e389
-color3                    #ff7800
-color4                    #62a0ea
-color5                    #9141ac
-color6                    #5bc8af
-color7                    #deddda
-
-color8                    #9a9996
-color9                    #f66151
-color10                   #8ff0a4
-color11                   #ffa348
-color12                   #99c1f1
-color13                   #dc8add
-color14                   #93ddc2
-color15                   #f6f5f4
+color0                    #1c1c1c
+color1                    #865054
+color2                    #5f7a5f
+color3                    #a4965f
+color4                    #5f7a8c
+color5                    #75607a
+color6                    #5f7a7f
+color7                    #eeeeee
+color8                    #666666
+color9                    #976061
+color10                   #729a72
+color11                   #a49a72
+color12                   #72949a
+color13                   #8c729a
+color14                   #729a96
+color15                   #f1f1f1
