--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -155,7 +155,7 @@ bind = $mainMod, W, exec, $browser
 bind = $mainMod SHIFT, E, exec, $fileManager-alt
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod SHIFT, Q, exec, hyprlock
-bind = $mainMod SHIFT, S, exec, hyprshot -zm region
+bind = $mainMod SHIFT, S, exec, hyprshot-gui 
 bind = $mainMod CTRL, C, exec, killall waybar || waybar
 
 # Move focus (keybinds)
