--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -1,116 +1,115 @@
 {
-  "layer": "top",
-  "position": "top",
-  "height": 30,
-  "spacing": 4,
-  "modules-left": [
-    "hyprland/workspaces"
-  ],
-  "modules-center": [
-    "hyprland/window"
-  ],
-  "modules-right": [
-    "tray",
-    "pulseaudio",
-    "battery",
-    "clock",
-    "custom/power"
-  ],
+    "layer": "top",  // Defines the layer position for the bar
+    "position": "top",  // Specifies the position of the bar (top or bottom)
+    "height": 30,  // Sets the height of the bar
+    "spacing": 4,  // Defines spacing between the modules
+    "icon-theme": "Papirus-Dark", 
+
+    // Left side modules
+    "modules-left": [
+        "hyprland/workspaces"  // Shows Hyprland workspaces
+    ],
+
+    // Center modules
+    // "modules-center": [
+    //    "hyprland/window"  // Displays the window title
+    // ],
+
+    // Right side modules
+    "modules-right": [
+        "tray",  // System tray
+        "pulseaudio",  // Audio controls
+        "battery",  // Battery status
+        "clock",  // Current time
+        "custom/power"  // Power button for logout
+    ],
+
+    // Network settings (Wi-Fi)
     "network": {
-        "format-wifi": "󰤨",
-        "format-disconnected": "󰤭",
-	"tooltip-format": "Connected to {essid} via {ifname}",	
-  },
- "bluetooth": {
-  "format": "{icon}",
-  "format-icons": {
-    "enabled": "󰂯",
-    "disabled": "󰂲"
-  },
-  	"tooltip-format": "Click to toggle Bluetooth",
-	"tooltip-format-connected": "Connected to {device_alias}",
-	"tooltip-format-no-controller": "Bluetooth adapter not found",
-	"tooltip-format-off": "Bluetooth is off",
-	"tooltip-format-on": "Bluetooth is on",
-	"tooltip-format-enumerate-connected": "{device_alias}",
-	"on-click": "blueman-manager"
-  },
-    "wlr/taskbar": {
-    "on-click": "activate",
-    "on-click-middle": "close",
-    "ignore-list": [
-      "foot{capacity}"
-    ]
-  },
-  "custom/bluetooth": {
-    "exec": "blueman-applet",
-    "interval": 60,
-    "format": "{output}"
-  },
-  "hyprland/window": {
-    "format": "{}",
-    "max-length": 64,
-    "rewrite": {
-      "(.*) - zsh": "> [$1]"
-    }
-  },
-  "custom/weather": {
-    "exec": "bash ~/.config/waybar/wittr.sh",
-    "return-type": "json",
-    "format": "{}",
-    "tooltip": true,
-    "interval": 900
-  },
-  "battery": {
-        "format": "{icon}",
-        "format-icons": [ "󰂎", "󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹" ],
-        "format-charging": "󰂄",
-        "format-warning": "󰂃",
-	"tooltip": true,
-	"tooltip-format": "{capacity}% batt."
-  },
-  "pulseaudio": {
-        "format": "{icon}",
-        "format-icons": ["󰝟", "󰕿", "󰖀", "󰕾"],
-        "format-muted": "󰝟",
-        "on-click": "pavucontrol",
-        "tooltip-format": "{volume}% vol."
-  },
-  "clock": {
-       "format": "{:%I:%M %p}",
-       "on-click": "kitty -e calcure",
-        "tooltip": true,
-        "tooltip-format": "{:%A, %d %B %Y}"
-  },
-  "tray": {
-  	"icon-size": 23,
-	"spacing": 4,
-	"reverse-direction": true
-  },
+        "format-wifi": "󰤨",  // Icon for connected Wi-Fi
+        "format-disconnected": "󰤭",  // Icon for disconnected Wi-Fi
+        "tooltip-format": "Connected to {essid} via {ifname}"  // Tooltip with Wi-Fi details
+    },
+
+    // Bluetooth settings
+    "custom/bluetooth": {
+        "exec": "blueman-applet",  // Bluetooth applet to show the icon
+        "interval": 60,  // Interval to update the Bluetooth status
+        "format": "{output}"  // Format of the Bluetooth status
+    },
+
+    // Window title settings (Hyprland)
+    "hyprland/window": {
+        "format": "{}",  // Format of the window title
+        "max-length": 64,  // Maximum length for the window title
+        "rewrite": {
+            "(.*) - zsh": "> [$1]"  // Rewrite rule for window titles containing "zsh"
+        }
+    },
+
+    // Battery settings
+    "battery": {
+        "format": "{icon}",  // Display the battery icon
+        "format-icons": [
+            "󰂎", "󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"  // Battery icons for different levels
+        ],
+        "format-charging": "󰂄",  // Icon while charging
+        "format-warning": "󰂃",  // Warning icon when battery is low
+        "tooltip": true,  // Display battery percentage in the tooltip
+        "tooltip-format": "{capacity}% batt."  // Tooltip format
+    },
+
+    // Pulseaudio settings
+    "pulseaudio": {
+        "format": "{icon}",  // Audio icon
+        "format-icons": ["󰝟", "󰕿", "󰖀", "󰕾"],  // Audio icons for different levels
+        "format-muted": "󰝟",  // Icon when audio is muted
+        "on-click": "pavucontrol",  // Command to open audio settings
+        "tooltip-format": "{volume}% vol."  // Tooltip showing current volume percentage
+    },
+
+    // Clock settings
+    "clock": {
+        "format": "{:%I:%M %p}",  // Time format (12-hour)
+        "on-click": "kitty -e calcure",  // Command to run when clicking on the clock
+        "tooltip": true,  // Display full date and time in tooltip
+        "tooltip-format": "{:%A, %d %B %Y}"  // Full date format in the tooltip
+    },
+
+    // Tray settings
+    "tray": {
+        "icon-size": 23,  // Size of the icons in the system tray
+        "spacing": 4,  // Spacing between tray icons
+        "reverse-direction": true  // Reverse the direction of the tray icons
+    },
+
+    // Custom power button (logout)
     "custom/power": {
-        "format": "<span size='large'>󰐥</span>",
-        "on-click": "wlogout"
-  },
-  "custom/menu": {
-        "format": "<span size='large'>\uf303</span>",
-        "on-click": "rofi -disable-history -show drun"
-  },
+        "format": "<span size='large'>󰐥</span>",  // Logout icon
+        "on-click": "wlogout"  // Command to run when clicking on the power icon
+    },
+
+    // Custom menu (application launcher)
+    "custom/menu": {
+        "format": "<span size='large'>\uf303</span>",  // Menu icon
+        "on-click": "rofi -disable-history -show drun"  // Command to show Rofi application launcher
+    },
+
+    // Custom space (used to create space between modules)
     "custom/space": {
-        "format": "|"
-  },
-"backlight": {
-  "format": "{icon}",
-  "format-icons": ["󰃞", "󰃝", "󰃟", "󰃠"],
-  "interval": 2,
-  "on-click": "hyprsunset -t 3750",
-  "on-scroll-up": "brightnessctl s +5%",
-  "on-scroll-down": "brightnessctl s 5%-",
-  "tooltip": true,
-  "tooltip-format": "Current brightness: {percent}%"
-},
-  "hyprland/language": {
-    "format-pl": "[pl]",
-    "format-en": "[us]",
-    "on-click": "hyprctl switchxkblayout at-translated-set-2-keyboard next"
-  },
+        "format": "|"  // Simple separator
+    },
+
+    // Backlight settings
+    "backlight": {
+        "format": "{icon}",  // Icon for the backlight
+        "format-icons": ["󰃞", "󰃝", "󰃟", "󰃠"],  // Icons for different backlight levels
+        "interval": 2,  // Interval to update backlight status
+        "on-click": "hyprsunset -t 3750",  // Command to adjust backlight temperature
+        "on-scroll-up": "brightnessctl s +5%",  // Command to increase brightness
+        "on-scroll-down": "brightnessctl s 5%-",  // Command to decrease brightness
+        "tooltip": true,  // Display backlight percentage in the tooltip
+        "tooltip-format": "Current brightness: {percent}%"  // Tooltip format
+    }
 }
+
