Extra terminal configs added

--- a/kitty/.config/kitty/current-theme.conf
+++ b/kitty/.config/kitty/current-theme.conf
@@ -1,4 +1,4 @@
-background                #1d1d1d
+background                #181818
 foreground                #eeeeee
 selection_background      #4d4d4d
 selection_foreground      #e1e1e1
