Changed the font rendering on kitty

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -19,7 +19,7 @@ env = XCURSOR_SIZE, 24
 $mainMod = SUPER
 $terminal = kitty
 $fileManager = nemo
-$fileManager-alt = rofi -disable-history -show file-browser-extended
+$fileManager-alt = kitty -e yazi
 $browser = zen-browser
 $menu = rofi -disable-history -show drun
 
@@ -151,7 +151,7 @@ bind = $mainMod ALT, L, resizeactive, 10 0
 bind = $mainMod, Q, killactive,
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, SPACE, exec, $menu
-bind = $mainMod, W, exec, $browser
+bind = $mainMod, B, exec, $browser
 bind = $mainMod SHIFT, E, exec, $fileManager-alt
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod SHIFT, Q, exec, hyprlock
