--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2,10 +2,10 @@ include current-theme.conf
 
 background_opacity 0.8
 
-# BEGIN_KITTY_FONTS
+# Fonts
 font_size	 12.5
-font_family      family="JetBrainsMono Nerd Font Mono"
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
-# END_KITTY_FONTS
+font_family               family="JetBrainsMono Nerd Font Mono"
+bold_font                 auto
+italic_font               auto
+bold_italic_font          auto
+text_composition_strategy legacy
