overall a better config for everything

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -33,7 +33,6 @@ bind = SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 
 # Layer rules
 layerrule = blur,notifications
-layerrule = blur,waybar
 layerrule = ignorezero, notifications
 layerrule = blur,rofi
 layerrule = blur,logout_dialog
@@ -47,17 +46,15 @@ decoration {
     rounding_power = 2.0
 }
 
+# Blur
+decoration:blur {
+    enabled = true
+    new_optimizations = true
+}
+
 # Window rules
-windowrule = noblur,class:^brave$
-windowrule = float, class:^org.twosheds.iwgtk$
-windowrulev2 = opacity 0.8 0.8,class:^mako$
-windowrulev2 = opacity 0.8 0.8,class:^org.gnome.gThumb$
-windowrulev2 = noblur,opacity 1.0 1.0,class:^org.vinegarhq.Sober$
-windowrulev2 = opacity 0.8 0.8,class:^io.missioncenter.MissionCenter$
-windowrulev2 = opacity 0.8 0.8,class:^evince$
-windowrulev2 = opacity 0.8 0.8,class:^vesktop$
+windowrulev2 = noblur,class:^org.vinegarhq.Sober$
 windowrulev2 = opacity 0.8 0.8,class:^nemo$
-windowrulev2 = opacity 0.8 0.8,class:^org.gnome.FileRoller$
 
 # Wallpaper
 exec-once = hyprpaper &
@@ -92,12 +89,10 @@ device {
 
 # Window animations
 animation = windows, 1, 5, default
-
-# Workspace animations
+animation = windowsIn, 1, 5, default, slide bottom 50%
+animation = windowsOut, 1, 5, default, slide bottom 100%
 animation = workspaces, 1, 5, default
-
-# Fade animations
-animation = fade, 1, 5, default
+animation = fadeOut, 1, 10, default
 
 # Volume Up
 bind = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.0 @DEFAULT_AUDIO_SINK@ 5%+
