--- a/mako/.config/mako/config
+++ b/mako/.config/mako/config
@@ -4,7 +4,7 @@ text-alignment=center
 width=300
 height=200
 default-timeout=5000
-background-color=#252525CC
-border-color=#d3d3d3
+background-color=#1c1c1cCC
+border-color=#eeeeee
 border-radius=8
-font=Inter 14
+font=Inter 12.5
