Waybar changes. Window title removed.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -132,7 +132,7 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 
 # Keybinds
-bind = CTRL ALT, DELETE, exec, wlogout
+bind = $mainMod SHIFT, P, exec, wlogout
 bind = ALT, Return, fullscreen
 bind = $mainMod, C, exec, hyprpicker
 bind = $mainMod SHIFT, SPACE, togglefloating
@@ -146,11 +146,12 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, B, exec, $browser
-bind = $mainMod SHIFT, E, exec, $fileManager-alt
+bind = $mainMod ALT, E, exec, $fileManager-alt
+bind = $mainMod SHIFT, E, exec, rofi -show emoji 
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod SHIFT, Q, exec, hyprlock
+bind = $mainMod SHIFT, X, exec, hyprlock
 bind = $mainMod SHIFT, S, exec, hyprshot-gui 
-bind = $mainMod CTRL, C, exec, killall waybar || waybar
+bind = $mainMod SHIFT, R, exec, killall waybar || waybar
 
 # Move focus (keybinds)
 bind = $mainMod, h, movefocus, l
