Overhauled waybar config

--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -1,89 +1,83 @@
 {
     "layer": "top",
-        "position": "top",
-        "height": 30,
-        "spacing": 8,
-        "modules-left": [
-            "hyprland/workspaces"
-        ],
-        "modules-center": [
-            "clock" 
-        ],
-        "modules-right": [
-            "tray",
+    "position": "top",
+    "height": 32,
+    "spacing": 4,
+    "modules-left": [
+        "clock",
+        "hyprland/workspaces"
+    ],
+    "modules-center": [
+        "hyprland/window"
+    ],
+    "modules-right": [
+        "tray",
+        "network",
         "pulseaudio",
-        "battery"
-        // "clock",
-        ],
-        "network": {
-            "format-wifi": "󰤨",
-            "format-disconnected": "󰤭",
-            "tooltip-format": "Connected to {essid} via {ifname}"
-        },
-        "custom/bluetooth": {
-            "exec": "blueman-applet",
-            "interval": 60,
-            "format": "{output}"
-        },
-        "hyprland/window": {
-            "format": "{}",
-            "max-length": 64,
-            "rewrite": {
-                "(.*) - zsh": "> [$1]"
-            }
-        },
-        //    "hyprland/workspaces": {
-        //        "format": "{icon}",
-        //        "format-icons": {
-        //            "active": "",
-        //            "default": ""
-        //        }
-        //    },
-        "battery": {
-            "format": "{icon}",
-            "format-icons": [
-                "󰂎", "󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"
-            ],
-            "format-charging": "󰂄",
-            "format-warning": "󰂃",
-            "tooltip": true,
-            "tooltip-format": "{capacity}% batt."
-        },
-        "pulseaudio": {
-            "format": "{icon}",
-            "format-icons": ["󰝟", "󰕿", "󰖀", "󰕾"],
-            "format-muted": "󰝟",
-            "on-click": "pavucontrol",
-            "tooltip-format": "{volume}% vol."
-        },
-        "clock": {
-            "format": "{:%b %d, %I:%M %p}",
-            "tooltip": false
-        },
-        "tray": {
-            "icon-size": 23,
-            "spacing": 5,
-            "reverse-direction": true
-        },
-        "custom/power": {
-            "format": "<span size='large'>󰐥</span>",
-            "on-click": "wlogout"
-        },
-        "custom/menu": {
-            "format": "<span size='large'>\uf303</span>",
-            "on-click": "rofi -disable-history -show drun",
-        },
-        "custom/space": {
-            "format": "|"
-        },
-        "backlight": {
-            "format": "{icon}",
-            "format-icons": ["󰃞", "󰃝", "󰃟", "󰃠"],
-            "interval": 2,
-            "on-click": "hyprsunset -t 3750",
-            "on-scroll-up": "brightnessctl s +5%",
-            "on-scroll-down": "brightnessctl s 5%-",
-            "tooltip": true,
-            "tooltip-format": "Current brightness: {percent}%"
+        "battery",
+        "custom/space",
+        "custom/power"
+    ],
+    "network": {
+        "format-wifi": "󰖩",
+        "format-disconnected": "󰖪",
+        "on-click": "iwgtk",
+        "tooltip-format": "{essid} ({signalStrength}%)",
+        "interface": "wlan0"
+    },
+    "hyprland/window": {
+        "format": "{}",
+        "max-length": 64,
+        "rewrite": {
+            "(.*) - zsh": "> [$1]"
         }
+    },
+    "battery": {
+        "format": "{icon}",
+        "format-icons": [
+            "󰂎", "󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"
+        ],
+        "format-charging": "󰂄",
+        "format-warning": "󰂃",
+        "tooltip": true,
+        "tooltip-format": "Battery ({capacity}%)"
+    },
+    "pulseaudio": {
+        "format": "{icon}",
+        "format-icons": ["󰝟", "󰕿", "󰖀", "󰕾"],
+        "format-muted": "󰝟",
+        "on-click": "pavucontrol",
+        "tooltip-format": "Volume ({volume}%)"
+    },
+    "clock": {
+        "format": "{:%I:%M %p} |",
+        "tooltip": true,
+        "tooltip-format": "{:%A, %B %d %Y}"
+    },
+    "tray": {
+        "icon-size": 23,
+        "spacing": 5,
+        "reverse-direction": true
+    },
+    "custom/space": {
+        "format": "|"
+    },
+    "custom/power": {
+        "format": "<span size='large'>󰐥</span>",
+        "on-click": "wlogout"
+    },
+    "custom/menu": {
+        "format": "<span size='large'>\uf303</span>",
+        "on-click": "rofi -disable-history -show drun"
+    },
+    "backlight": {
+        "format": "{icon}",
+        "format-icons": ["󰃞", "󰃝", "󰃟", "󰃠"],
+        "interval": 2,
+        "on-click": "hyprsunset -t 3750",
+        "on-scroll-up": "brightnessctl s +5%",
+        "on-scroll-down": "brightnessctl s 5%-",
+        "tooltip": true,
+        "tooltip-format": "Current brightness: {percent}%"
+    }
 }
