--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -147,7 +147,7 @@ bind = $mainMod ALT, E, exec, $fileManager-alt
 bind = $mainMod SHIFT, E, exec, rofi -show emoji 
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod SHIFT, X, exec, hyprlock
-bind = $mainMod SHIFT, S, exec, hyprshot-gui 
+bind = $mainMod SHIFT, S, exec, ~/dotfiles/screenshot.sh
 bind = $mainMod SHIFT, R, exec, killall waybar || waybar
 
 # Move focus (keybinds)
