--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -36,6 +36,7 @@ layerrule = blur,logout_dialog
 
 # notifd
 exec-once = mako &
+exec-once = /home/joaquin/.config/swappy/monitor.sh &
 
 # Decorations
 decoration {
@@ -147,7 +148,7 @@ bind = $mainMod ALT, E, exec, $fileManager-alt
 bind = $mainMod SHIFT, E, exec, rofi -show emoji 
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod SHIFT, X, exec, hyprlock
-bind = $mainMod SHIFT, S, exec, ~/dotfiles/screenshot.sh
+bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | swappy -f - -o "$FILENAME"
 bind = $mainMod SHIFT, R, exec, killall waybar || waybar
 
 # Move focus (keybinds)
