--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -6,7 +6,7 @@ env = XDG_CONFIG_HOME,$HOME/.config
 env = QT_QPA_PLATFORMTHEME,qt6ct
 
 # GTK Theming
-env = GTK_THEME,MonoThemeDark
+env = GTK_THEME,Materia-dark-compact
 exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
 
 # Cursor theming
