Darker colorscheme for almost everything.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -31,6 +31,7 @@ bind = SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 # Layer rules
 layerrule = blur,notifications
 layerrule = ignorezero, notifications
+layerrule = blur,wofi
 layerrule = blur,rofi
 layerrule = blur,logout_dialog
 
@@ -51,6 +52,9 @@ decoration:blur {
 }
 
 # Window rules
+windowrulev2 = float, class:^wofi$
+windowrulev2 = pin, class:^wofi$
+# windowrulev2 = lock, class:^wofi$
 windowrulev2 = noblur,class:^org.vinegarhq.Sober$
 windowrulev2 = opacity 0.8 0.8,class:^nemo$
 
@@ -89,6 +93,8 @@ device {
 animation = windows, 1, 5, default
 animation = windowsIn, 1, 5, default, slide bottom 50%
 animation = windowsOut, 1, 5, default, slide bottom 100%
+animation = layersIn, 1, 5, default, 
+animation = layersOut, 1, 3, default,
 animation = workspaces, 1, 5, default
 animation = fadeOut, 1, 10, default
 
