Modified GTK theme.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -6,7 +6,7 @@ env = XDG_CONFIG_HOME,$HOME/.config
 env = QT_QPA_PLATFORMTHEME,qt6ct
 
 # GTK Theming
-env = GTK_THEME,Materia-dark-compact
+env = GTK_THEME,Mono_Mod
 exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
 
 # Cursor theming
@@ -54,7 +54,6 @@ decoration:blur {
 # Window rules
 windowrulev2 = float, class:^wofi$
 windowrulev2 = pin, class:^wofi$
-# windowrulev2 = lock, class:^wofi$
 windowrulev2 = noblur,class:^org.vinegarhq.Sober$
 windowrulev2 = opacity 0.8 0.8,class:^nemo$
 
