Added more wallpapers to hyprpaper.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -55,7 +55,7 @@ decoration:blur {
 windowrulev2 = float, class:^wofi$
 windowrulev2 = pin, class:^wofi$
 windowrulev2 = noblur,class:^org.vinegarhq.Sober$
-windowrulev2 = opacity 0.8 0.8,class:^nemo$
+windowrulev2 = opacity 0.8,class:^nemo$
 
 # Wallpaper
 exec-once = hyprpaper &
