--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -1,6 +1,7 @@
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_CONFIG_HOME,$HOME/.config
+env = RUST_BACKTRACE=1
 
 # QT Theming
 env = QT_QPA_PLATFORMTHEME,qt6ct
@@ -27,6 +28,10 @@ $menu = rofi -disable-history -show drun
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 bind = SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
+
+input {
+    kb_options = caps:f13
+}
 
 # Layer rules
 layerrule = blur,notifications
