Wi-fi menu added to rofi

--- a/hyprpaper/.config/hypr/hyprpaper.conf
+++ b/hyprpaper/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = $XDG_CONFIG_HOME/hypr/wallpaper/cabin.png
-wallpaper = , $XDG_CONFIG_HOME/hypr/wallpaper/cabin.png
+preload = ~/dotfiles/hyprpaper/.config/hypr/wallpaper/cabin.png
+wallpaper = , ~/dotfiles/hyprpaper/.config/hypr/wallpaper/cabin.png
