--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -1,22 +1,27 @@
+############################
+#        ENV VARS         #
+############################
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
-env = XDG_CONFIG_HOME,$HOME/.config
-env = RUST_BACKTRACE=1
+env = RUST_BACKTRACE,1
 
 # QT Theming
 env = QT_QPA_PLATFORMTHEME,qt6ct
+env = QT_STYLE_OVERRIDE,kvantum
 
 # GTK Theming
 env = GTK_THEME,Mono_Mod
 exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
 
-# Cursor theming
+# Cursor Theming
 env = HYPRCURSOR_SIZE,24
+env = XCURSOR_SIZE,24
 env = HYPRCURSOR_THEME,Bibata-Modern-Classic
 env = XCURSOR_THEME,Bibata-Modern-Classic
-env = XCURSOR_SIZE, 24
 
-# Default programs
+############################
+#     DEFAULT PROGRAMS     #
+############################
 $mainMod = SUPER
 $terminal = kitty
 $fileManager = nemo
@@ -24,26 +29,32 @@ $fileManager-alt = kitty -e yazi
 $browser = zen-browser
 $menu = rofi -disable-history -show drun
 
-# Clipboard history
+############################
+#     CLIPBOARD HISTORY    #
+############################
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 bind = SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 
+############################
+#        INPUT             #
+############################
 input {
     kb_options = caps:f13
 }
 
-# Layer rules
+############################
+#       LAYER RULES        #
+############################
 layerrule = blur,notifications
-layerrule = ignorezero, notifications
+layerrule = ignorezero,notifications
 layerrule = blur,wofi
 layerrule = blur,rofi
 layerrule = blur,logout_dialog
 
-# notifd
-exec-once = mako &
-
-# Decorations
+############################
+#      DECORATIONS        #
+############################
 decoration {
     rounding = 7
     rounding_power = 2.0
@@ -55,68 +66,78 @@ decoration:blur {
     new_optimizations = true
 }
 
-# Window rules
+############################
+#     WINDOW RULES        #
+############################
 windowrulev2 = float, class:^wofi$
 windowrulev2 = pin, class:^wofi$
-windowrulev2 = noblur,class:^org.vinegarhq.Sober$
-windowrulev2 = opacity 0.8,class:^nemo$
+windowrulev2 = noblur, class:^org.vinegarhq.Sober$
+windowrulev2 = opacity 0.8, class:^nemo$
 
-# Wallpaper
-exec-once = hyprpaper &
-
+############################
+#       GENERAL           #
+############################
 general {
     gaps_in = 5
     gaps_out = 10
-    col.active_border = rgb(dddddd) # rgb(dddddd) 45deg
-    col.inactive_border = rgb(252525) 
+    col.active_border = rgb(dddddd)
+    col.inactive_border = rgb(252525)
     border_size = 2
 }
 
+############################
+#   DEVICE CONFIGURATION  #
+############################
 device {
   name = beken-2.4g-wireless-device-1
   accel_profile = flat
 }
-
 device {
   name = beken-2.4g-wireless-device-2
   accel_profile = flat
 }
-
 device {
   name = beken-usb-gaming-mouse-1
   accel_profile = flat
 }
-
 device {
   name = beken-usb-gaming-mouse-2
   accel_profile = flat
 }
 
-# Window animations
+############################
+#     WINDOW ANIMATIONS   #
+############################
 animation = windows, 1, 5, default
 animation = windowsIn, 1, 5, default, slide bottom 50%
 animation = windowsOut, 1, 5, default, slide bottom 100%
-animation = layersIn, 1, 5, default, 
-animation = layersOut, 1, 3, default,
+animation = layersIn, 1, 5, default
+animation = layersOut, 1, 3, default
 animation = workspaces, 1, 5, default
 animation = fadeOut, 1, 10, default
 
-# Volume Up
+############################
+#        VOLUME KEYS      #
+############################
 bind = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.0 @DEFAULT_AUDIO_SINK@ 5%+
-
-# Volume Down
 bind = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-
-# Mute Toggle
 bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle 
 
-# Autostart
+############################
+#       AUTOSTART         #
+############################
 exec-once = waybar &
+exec-once = hyprpaper &
+exec-once = mako &
 
-# Monitor configuration
+############################
+#   MONITOR CONFIGURATION #
+############################
 monitor = eDP-1,1920x1080@144,auto,1.0
 
-# Switch to workspace 1 - 9
+############################
+#  WORKSPACE SWITCHING    #
+############################
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
@@ -126,8 +147,6 @@ bind = $mainMod, 6, workspace, 6
 bind = $mainMod, 7, workspace, 7
 bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
-
-# Move active window to workspace 1 - 9
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
@@ -138,18 +157,20 @@ bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 
-# Keybinds
+############################
+#       KEYBINDS         #
+############################
 bind = $mainMod SHIFT, P, exec, wlogout
 bind = ALT, Return, fullscreen
 bind = $mainMod, C, exec, hyprpicker
 bind = $mainMod SHIFT, SPACE, togglefloating
-bindm = $mainMod,mouse:272,movewindow
-bindm = $mainMod,mouse:273,resizewindow
+bindm = $mainMod, mouse:272, movewindow
+bindm = $mainMod, mouse:273, resizewindow
 bind = $mainMod ALT, H, resizeactive, -10 0
 bind = $mainMod ALT, J, resizeactive, 0 10
 bind = $mainMod ALT, K, resizeactive, 0 -10
 bind = $mainMod ALT, L, resizeactive, 10 0
-bind = $mainMod, Q, killactive,
+bind = $mainMod, Q, killactive
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, B, exec, $browser
@@ -160,13 +181,14 @@ bind = $mainMod SHIFT, X, exec, hyprlock
 bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | swappy -f - -o "$FILENAME"
 bind = $mainMod SHIFT, R, exec, killall waybar || waybar
 
-# Move focus (keybinds)
+############################
+#    WINDOW MANAGEMENT    #
+############################
 bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
 
-# Move windows
 bind = $mainMod SHIFT, h, movewindow, l
 bind = $mainMod SHIFT, l, movewindow, r
 bind = $mainMod SHIFT, k, movewindow, u
