Hyprland x-ray blur enabled

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -64,6 +64,8 @@ decoration {
 decoration:blur {
     enabled = true
     new_optimizations = true
+    new_optimizations = true
+    xray = true
 }
 
 ############################
