Better shell scripts

--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -11,7 +11,7 @@ general {
 # BACKGROUND
 background {
     monitor =
-    path = $XDG_CONFIG_HOME/hypr/wallpaper/cabin.png
+    path = ~/.config/hypr/wallpaper/cabin.png
     blur_passes = 2
 }
 
