--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -4,6 +4,7 @@
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = RUST_BACKTRACE,1
+env = TERMINAL,kitty
 
 # QT Theming
 env = QT_QPA_PLATFORMTHEME,qt6ct
