GTK theming a bit fixed

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -57,16 +57,13 @@ layerrule = blur,logout_dialog
 #      DECORATIONS        #
 ############################
 decoration {
+    blur {
+        enabled = true
+        new_optimizations = true
+        xray = true
+    }
     rounding = 7
     rounding_power = 2.0
-}
-
-# Blur
-decoration:blur {
-    enabled = true
-    new_optimizations = true
-    new_optimizations = true
-    xray = true
 }
 
 ############################
@@ -115,7 +112,7 @@ animation = windows, 1, 5, default
 animation = windowsIn, 1, 5, default, slide bottom 50%
 animation = windowsOut, 1, 5, default, slide bottom 100%
 animation = layersIn, 1, 5, default
-animation = layersOut, 1, 3, default
+animation = layersOut, 1, 5, default
 animation = workspaces, 1, 5, default
 animation = fadeOut, 1, 10, default
 
@@ -136,7 +133,7 @@ exec-once = mako &
 ############################
 #   MONITOR CONFIGURATION #
 ############################
-monitor = eDP-1,1920x1080@144,auto,1.0
+monitor = ,1920x1080@144,auto,1.0
 
 ############################
 #  WORKSPACE SWITCHING    #
@@ -178,7 +175,7 @@ bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, B, exec, $browser
 bind = $mainMod ALT, E, exec, $fileManager-alt
-bind = $mainMod SHIFT, E, exec, rofi -show emoji 
+bind = $mainMod, PERIOD, exec, rofi -show emoji 
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod SHIFT, X, exec, hyprlock
 bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | swappy -f - -o "$FILENAME"
