--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -11,7 +11,7 @@ env = QT_QPA_PLATFORMTHEME,qt6ct
 env = QT_STYLE_OVERRIDE,kvantum
 
 # GTK Theming
-env = GTK_THEME,Mono_Mod
+env = GTK_THEME,JQN-Dark
 exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
 
 # Cursor Theming
