--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -157,26 +157,42 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 ############################
 #       KEYBINDS         #
 ############################
-bind = $mainMod SHIFT, P, exec, wlogout
-bind = ALT, Return, fullscreen
-bind = $mainMod, C, exec, hyprpicker
+
+# ──────────────────────────────
+# Window & Session Management
+# ──────────────────────────────
+bind = $mainMod, Q, killactive
+bind = $mainMod SHIFT, Q, exit
 bind = $mainMod SHIFT, SPACE, togglefloating
+bind = ALT, Return, fullscreen
+bind = $mainMod, RETURN, exec, $terminal
+bind = $mainMod, SPACE, exec, $menu
+bind = $mainMod SHIFT, X, exec, hyprlock
+
+# ──────────────────────────────
+# App Shortcuts
+# ──────────────────────────────
+bind = $mainMod, B, exec, $browser
+bind = $mainMod, E, exec, $fileManager
+bind = $mainMod ALT, E, exec, $fileManager-alt
+bind = $mainMod, PERIOD, exec, rofi -show emoji
+bind = $mainMod, C, exec, hyprpicker
+bind = $mainMod SHIFT, S, exec, ~/.config/swappy/swappy.sh
+
+# ──────────────────────────────
+# Window Movement & Resizing
+# ──────────────────────────────
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 bind = $mainMod ALT, H, resizeactive, -20 0
 bind = $mainMod ALT, J, resizeactive, 0 20
 bind = $mainMod ALT, K, resizeactive, 0 -20
 bind = $mainMod ALT, L, resizeactive, 20 0
-bind = $mainMod, Q, killactive
-bind = $mainMod, RETURN, exec, $terminal
-bind = $mainMod, SPACE, exec, $menu
-bind = $mainMod, B, exec, $browser
-bind = $mainMod ALT, E, exec, $fileManager-alt
-bind = $mainMod, PERIOD, exec, rofi -show emoji 
-bind = $mainMod, E, exec, $fileManager
-bind = $mainMod SHIFT, X, exec, hyprlock
-bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | swappy -f - -o "$FILENAME"
-bind = $mainMod SHIFT, R, exec, killall waybar || waybar
+
+# ──────────────────────────────
+# System Utilities
+# ──────────────────────────────
+bind = $mainMod SHIFT, P, exec, wlogout
 
 ############################
 #    WINDOW MANAGEMENT    #
