Battery is managed a little better with variable refresh rates

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -37,13 +37,6 @@ exec-once = wl-paste --type image --watch cliphist store
 bind = SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 
 ############################
-#        INPUT             #
-############################
-input {
-    kb_options = caps:f13
-}
-
-############################
 #       LAYER RULES        #
 ############################
 layerrule = blur,notifications
@@ -126,6 +119,7 @@ bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 exec-once = waybar &
 exec-once = hyprpaper &
 exec-once = mako &
+exec-once = ~/.config/hypr/scripts/battery-watcher.sh &
 
 ############################
 #   MONITOR CONFIGURATION #
