--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -171,7 +171,7 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod ALT, E, exec, $fileManager-alt
 bind = $mainMod, PERIOD, exec, rofi -show emoji
 bind = $mainMod, C, exec, hyprpicker
-bind = $mainMod SHIFT, S, exec, ~/.config/swappy/swappy.sh
+bind = $mainMod SHIFT, S, exec, ~/.config/hypr/scripts/swappy.sh
 
 # ──────────────────────────────
 # Window Movement & Resizing
