--- a/mako/.config/mako/config
+++ b/mako/.config/mako/config
@@ -7,4 +7,4 @@ default-timeout=3000
 background-color=#1c1c1cCC
 border-color=#eeeeee
 border-radius=8
-font=Rubik 12.5
+font=Rubik, JetBrainsMono Nerd Font Mono 13
