--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -109,9 +109,9 @@ animation = fadeOut, 1, 10, default
 ############################
 #        VOLUME KEYS      #
 ############################
-bind = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.0 @DEFAULT_AUDIO_SINK@ 5%+
-bind = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle 
+bind = , XF86AudioRaiseVolume, exec, ~/.config/mako/volume.sh --inc
+bind = , XF86AudioLowerVolume, exec, ~/.config/mako/volume.sh --dec
+bind = , XF86AudioMute, exec, ~/.config/mako/volume.sh --toggle
 
 ############################
 #       AUTOSTART         #
